# GNN_exploration

./: EDA.ipynb  README.md  pyproject.toml
Cora/: README.md  gcn.ipynb  pyproject.toml
Rainfall/: README.md  pyproject.toml  requirements.txt
Schizophrenia/: BrainGNN.ipynb  EDA.ipynb  README.md
