[project]
name = "assignment10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"

[dependency-groups]
backend = [
    "fastapi==0.115.11",
    "uvicorn==0.34.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "pandas==2.2.3",
    "mlflow-skinny==2.21.3",
    "python-multipart>=0.0.20",
    "python-json-logger==3.3.0",
    "pyarrow==15.0.2",
    "darts",
    "pyodbc",
]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "jupytext>=1.17.0",
    "seaborn==0.13.2",
    "ruff==0.11.10",
    "pytest==8.3.5",
    "black",
    "autopep8",
    "nltk==3.8.1",
    "tabulate",
    "python-dotenv==1.0.0", # llm
    "openai==1.59.6", # llm
    "httpx==0.27.2",  # llm
    "tiktoken>=0.7,<1",  # llm
    "langchain>= 0.3.21",
    "langchainhub==0.1.13",
    "langchain-openai==0.2.0",  # llm 
    "langchain-community==0.3.20",  # llm
    "panel",  # llm
    "opencv-python==4.10.0.84",  # llm vid processing
    "moviepy==1.0.3",  # llm vid processing
    "pypdf==3.17.0", # llm question over docs
    "faiss-cpu",  # llm question over docs
    "chromadb==0.4.15",  # llm rag
    "colab-xterm",  # llm ollama
]
training = [
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "matplotlib==3.10.1",
    "mlflow==2.21.3",
    "omegaconf>=2.3.0",
    "pandas==2.2.3",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "python-json-logger==3.3.0",
    "jsonlines==4.0.0",
    "psutil==7.0.0",
    "ucimlrepo",
    "statsmodels",
    "scipy",
    "tensorflow==2.16.1",
    "missingno",
    "huggingface_hub",  # huggingface login
    "ipywidgets",  # huggingface login
    "datasets",  # huggingface data
    "transformers",  # huggingface models
    "accelerate",  # huggingface models
    "evaluate",  # huggingface evaluate
    "rouge_score",  # huggingface evaluate
    "absl-py",  # huggingface evaluate
]

[tool.jupytext]
formats = "ipynb,py:percent"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]