[project]
name = "A6P4-Project"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.8"
dependencies = [
    "accelerate>=1.9.0",
    "attrs==25.3.0",
    "captum>=0.7.0",
    "category-encoders>=2.8.1",
    "chardet>=5.2.0",
    "contextily>=1.6.2",
    "dotenv==0.9.9",
    "geopandas>=1.1.1",
    "google-auth==2.40.3",
    "hydra-core==1.3.2",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-server==2.16.0",
    "jupyter-server-mathjax==0.2.6",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab-pygments==0.3.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "markdown==3.8.2",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "missingno>=0.5.2",
    "mlflow==2.21.3",
    "mlflow-skinny==2.21.3",
    "narwhals==1.45.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx>=3.5",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "pandas==2.3.0",
    "pillow==11.3.0",
    "plotly==6.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "pywavelets>=1.8.0",
    "pyyaml==6.0.2",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "shap>=0.48.0",
    "torch==2.7.1+cu128",
    "torch-geometric>=2.6.1",
    "torch-geometric-temporal>=0.56.2",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torchvision==0.22.1+cu128",
    "tqdm==4.67.1",
    "tree==0.2.4",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "ucimlrepo>=0.0.7",
    "umap-learn==0.5.8",
    "uvicorn==0.34.3",
]

[tool.uv]
# only resolve for Windows
environments = ["sys_platform == 'win32'"]

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

# declare the default PyPI index under a name you can reference
[[tool.uv.index]]
name     = "pypi"
url      = "https://pypi.org/simple"
# explicit=false means “also search this implicitly when needed”
explicit = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pypi",          marker = "sys_platform == 'darwin'" }
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pypi",          marker = "sys_platform == 'darwin'" }
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pypi",          marker = "sys_platform == 'darwin'" }
]

[tool.uv.workspace]
members = [
    "A6P4-Project-Repository",
]
